tests/snapshots/snapshots__fc_blackbox@LOG00007.BFL.snap
---
source: tests/snapshots.rs
expression: snapshot
input_file: ".modules/fc-blackbox/src/test-data/LOG00007.BFL"
---
FileSnapshot(
  count: 1,
  logs: [
    Ok(LogSnapshot(
      headers: Headers(
        version: V2,
        firmware_revision: "Betaflight 4.2.6 (a4b6db1e7) STM32F405",
        firmware: Betaflight("4.2.6"),
        board_info: Some("AIRB OMNIBUSF4"),
        craft_name: None,
        debug_mode: GyroFiltered,
        disabled_fields: [],
        features: [
          RxSerial,
          AirMode,
          AntiGravity,
        ],
        vbat_reference: Some(0),
        acceleration_1g: Some(2048),
        gyro_scale: Some(0.017453292),
        min_throttle: Some(1070),
        motor_output_range: Some(MotorOutputRange(
          min: 158,
          max: 2047,
        )),
        unknown: {
          "dyn_notch_width_percent": "0",
          "rc_smoothing_active_cutoffs": "0, 90",
          "acc_hardware": "0",
          "deadband": "0",
          "tpa_rate": "65",
          "rc_smoothing_cutoffs": "0, 0",
          "gyro_lowpass2_type": "0",
          "rate_limits": "1998,1998,1998",
          "dterm_notch_cutoff": "0",
          "pid_process_denom": "1",
          "gyro_cal_on_first_arm": "0",
          "yaw_lowpass_hz": "0",
          "acc_limit_yaw": "0",
          "dyn_notch_max_hz": "400",
          "yaw_deadband": "0",
          "mag_hardware": "1",
          "maxthrottle": "2000",
          "vbat_pid_gain": "0",
          "I interval": "256",
          "dterm_lowpass_dyn_hz": "70,170",
          "use_integrated_yaw": "0",
          "dshot_bidir": "0",
          "ff_boost": "15",
          "gyro_sync_denom": "1",
          "rpm_notch_lpf": "150",
          "rc_smoothing_filter_type": "1, 1",
          "serialrx_provider": "2",
          "dshot_idle_value": "550",
          "feedforward_weight": "90,95,90",
          "d_min_advance": "20",
          "rc_smoothing_debug_axis": "0",
          "gyro_rpm_notch_q": "500",
          "rc_interpolation_channels": "2",
          "dterm_filter2_type": "0",
          "ff_interpolate_sp": "2",
          "gyro_lowpass_type": "0",
          "Log start datetime": "0000-01-01T00:00:00.000+00:00",
          "dterm_filter_type": "0",
          "vbatcellvoltage": "330,350,430",
          "anti_gravity_mode": "0",
          "rc_interpolation_interval": "19",
          "rc_smoothing_type": "1",
          "iterm_relax": "1",
          "gyro_rpm_notch_harmonics": "2",
          "rc_interpolation": "2",
          "tpa_breakpoint": "1350",
          "d_min_gain": "37",
          "dterm_lowpass_hz": "150",
          "rates": "70,70,70",
          "iterm_relax_cutoff": "15",
          "d_min": "23,25,0",
          "acc_limit": "0",
          "ff_spike_limit": "60",
          "ff_max_rate_limit": "100",
          "gyro_lowpass_hz": "200",
          "gyro_notch_hz": "0,0",
          "anti_gravity_threshold": "250",
          "acc_lpf_hz": "1000",
          "baro_hardware": "1",
          "motor_pwm_protocol": "7",
          "rc_rates": "100,100,100",
          "pidAtMinThrottle": "1",
          "pitchPID": "46,90,38",
          "magPID": "40",
          "P interval": "8",
          "pidsum_limit_yaw": "400",
          "pidsum_limit": "500",
          "rates_type": "0",
          "Firmware date": "Jan  5 2021 19:07:23",
          "dyn_notch_min_hz": "80",
          "iterm_relax_type": "1",
          "dterm_rpm_notch_min": "100",
          "gyro_lowpass_dyn_hz": "200,500",
          "motor_pwm_rate": "480",
          "thr_mid": "50",
          "dyn_notch_q": "250",
          "dterm_notch_hz": "0",
          "feedforward_transition": "0",
          "gyro_rpm_notch_min": "80",
          "rollPID": "42,85,35",
          "thr_expo": "0",
          "looptime": "125",
          "yawPID": "45,90,0",
          "levelPID": "50,50,75",
          "rc_expo": "0,0,0",
          "dterm_rpm_notch_harmonics": "0",
          "airmode_activate_throttle": "25",
          "P ratio": "32",
          "anti_gravity_gain": "3500",
          "gyro_hardware_lpf": "0",
          "dterm_lowpass2_hz": "150",
          "use_unsynced_pwm": "0",
          "rc_smoothing_rx_average": "0",
          "dterm_rpm_notch_q": "500",
          "iterm_windup": "100",
          "abs_control_gain": "0",
          "gyro_notch_cutoff": "0,0",
          "rc_smoothing_auto_factor": "10",
          "gyro_lowpass2_hz": "250",
        },
      ),
      stats: Stats(
        counts: FrameCounts(
          event: 0,
          main: 199975,
          slow: 25,
          gps: 0,
          gps_home: 0,
        ),
      ),
      capped: true,
      main: MainSnapshot(
        count: 199975,
        last_iteration: 1599750,
        time: FieldSnapshot(
          min: 0,
          max: 206906693,
          unique: 199975,
          histogram: (12280, 12425, 12706, 12446, 12568, 12593, 12598, 12378, 12307, 12491, 12617, 12486, 12560, 12502, 12614, 12404),
        ),
        fields: Fields([
          FieldSnapshot(
            name: "axisP[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -115,
              max: 79,
              unique: 188,
              histogram: (53140, 28307, 21245, 15285, 12196, 10394, 8941, 7549, 6739, 6109, 5778, 5773, 5583, 4930, 4195, 3811),
            ),
          ),
          FieldSnapshot(
            name: "axisP[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -100,
              max: 89,
              unique: 189,
              histogram: (52354, 26955, 21530, 17340, 14591, 12177, 10292, 8338, 7066, 5783, 5122, 4622, 4050, 3650, 3249, 2856),
            ),
          ),
          FieldSnapshot(
            name: "axisP[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -128,
              max: 296,
              unique: 411,
              histogram: (57647, 26123, 18280, 14080, 11127, 9034, 7976, 6826, 6125, 6831, 6679, 6746, 6822, 5671, 4951, 5057),
            ),
          ),
          FieldSnapshot(
            name: "axisI[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "axisI[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "axisI[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "axisD[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -91,
              max: 84,
              unique: 141,
              histogram: (79417, 44040, 26679, 15304, 9354, 6187, 4523, 3321, 2532, 1999, 1671, 1271, 1163, 951, 808, 755),
            ),
          ),
          FieldSnapshot(
            name: "axisD[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -70,
              max: 62,
              unique: 112,
              histogram: (77048, 43202, 27040, 16306, 10163, 6786, 4662, 3466, 2784, 2137, 1789, 1348, 1084, 826, 734, 600),
            ),
          ),
          FieldSnapshot(
            name: "axisF[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "axisF[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "axisF[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "rcCommand[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "rcCommand[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "rcCommand[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "rcCommand[3]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 1000,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "setpoint[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "setpoint[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "setpoint[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "setpoint[3]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "vbatLatest",
            unit: Voltage,
            history: FieldSnapshot(
              min: 0,
              max: 70,
              unique: 8,
              histogram: (35396, 0, 569, 0, 47362, 0, 19, 0, 4613, 0, 103290, 0, 19, 0, 8707, 0),
            ),
          ),
          FieldSnapshot(
            name: "gyroADC[0]",
            unit: Rotation,
            history: FieldSnapshot(
              min: -58,
              max: 85,
              unique: 143,
              histogram: (44934, 38995, 25118, 16067, 11929, 9670, 8183, 7344, 6699, 6209, 5413, 4662, 4148, 3753, 3631, 3220),
            ),
          ),
          FieldSnapshot(
            name: "gyroADC[1]",
            unit: Rotation,
            history: FieldSnapshot(
              min: -60,
              max: 66,
              unique: 127,
              histogram: (46234, 39797, 27845, 19775, 14767, 10814, 7884, 6466, 5436, 4417, 3652, 3118, 2662, 2439, 2393, 2276),
            ),
          ),
          FieldSnapshot(
            name: "gyroADC[2]",
            unit: Rotation,
            history: FieldSnapshot(
              min: -205,
              max: 89,
              unique: 292,
              histogram: (52582, 37214, 21007, 13902, 10444, 8923, 7687, 7116, 6519, 6239, 5704, 5002, 4577, 4558, 4220, 4281),
            ),
          ),
          FieldSnapshot(
            name: "accSmooth[0]",
            unit: Acceleration,
            history: FieldSnapshot(
              min: -321,
              max: 1124,
              unique: 1415,
              histogram: (10946, 11264, 13235, 18404, 17744, 13925, 11434, 11223, 11900, 11277, 11319, 11228, 11582, 11682, 11642, 11170),
            ),
          ),
          FieldSnapshot(
            name: "accSmooth[1]",
            unit: Acceleration,
            history: FieldSnapshot(
              min: -641,
              max: 643,
              unique: 1276,
              histogram: (11932, 12744, 16718, 22980, 17120, 11966, 11302, 12066, 10961, 10879, 10054, 11183, 10156, 10411, 9900, 9603),
            ),
          ),
          FieldSnapshot(
            name: "accSmooth[2]",
            unit: Acceleration,
            history: FieldSnapshot(
              min: 0,
              max: 1978,
              unique: 1436,
              histogram: (12212, 12567, 11864, 11447, 11039, 11211, 11229, 11962, 13250, 14509, 13864, 13257, 12973, 12855, 12574, 13162),
            ),
          ),
          FieldSnapshot(
            name: "debug[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -58,
              max: 85,
              unique: 143,
              histogram: (44934, 38995, 25118, 16067, 11929, 9670, 8183, 7344, 6699, 6209, 5413, 4662, 4148, 3753, 3631, 3220),
            ),
          ),
          FieldSnapshot(
            name: "debug[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -60,
              max: 66,
              unique: 127,
              histogram: (46234, 39797, 27845, 19775, 14767, 10814, 7884, 6466, 5436, 4417, 3652, 3118, 2662, 2439, 2393, 2276),
            ),
          ),
          FieldSnapshot(
            name: "debug[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -205,
              max: 89,
              unique: 292,
              histogram: (52582, 37214, 21007, 13902, 10444, 8923, 7687, 7116, 6519, 6239, 5704, 5002, 4577, 4558, 4220, 4281),
            ),
          ),
          FieldSnapshot(
            name: "debug[3]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "motor[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 158,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "motor[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 158,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "motor[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 158,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "motor[3]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 158,
              unique: 1,
            ),
          ),
        ]),
      ),
      slow: SlowSnapshot(
        count: 25,
        fields: Fields([
          FieldSnapshot(
            name: "flightModeFlags",
            unit: FlightMode,
            history: {},
          ),
          FieldSnapshot(
            name: "stateFlags",
            unit: State,
            history: {},
          ),
          FieldSnapshot(
            name: "failsafePhase",
            unit: FailsafePhase,
            history: {
              "IDLE": 25,
            },
          ),
          FieldSnapshot(
            name: "rxSignalReceived",
            unit: Boolean,
            history: History(
              yes: 0,
              no: 25,
            ),
          ),
          FieldSnapshot(
            name: "rxFlightChannelsValid",
            unit: Boolean,
            history: History(
              yes: 0,
              no: 25,
            ),
          ),
        ]),
      ),
    )),
  ],
)
