tests/snapshots/snapshots__fc_blackbox@btfl_all.bbl.snap
---
source: tests/snapshots.rs
expression: snapshot
input_file: ".modules/fc-blackbox/src/test-data/btfl_all.bbl"
---
File(
  count: 44,
  logs: [
    Ok(Log(
      headers: Headers(
        firmware_revision: "Betaflight 4.2.8 (101738d8e) STM32F7X2",
        firmware: Betaflight("4.2.8"),
        firmware_date: Some(Ok("2021-02-15 12:10:35.0")),
        board_info: Some("AIKO AIKONF7"),
        craft_name: Some("Gecko"),
        debug_mode: None,
        disabled_fields: [],
        features: [
          RxSerial,
          ServoTilt,
          Telemetry,
          Osd,
          AirMode,
          EscSensor,
          AntiGravity,
          DynamicFilter,
        ],
        pwm_protocol: Dshot600,
        unknown: {
          "I interval": "256",
          "Log start datetime": "0000-01-01T00:00:00.000+00:00",
          "P interval": "16",
          "P ratio": "16",
          "abs_control_gain": "0",
          "acc_hardware": "0",
          "acc_limit": "0",
          "acc_limit_yaw": "0",
          "acc_lpf_hz": "1000",
          "airmode_activate_throttle": "25",
          "anti_gravity_gain": "3500",
          "anti_gravity_mode": "0",
          "anti_gravity_threshold": "250",
          "baro_hardware": "1",
          "d_min": "27,30,0",
          "d_min_advance": "20",
          "d_min_gain": "37",
          "deadband": "1",
          "dshot_bidir": "1",
          "dshot_idle_value": "550",
          "dterm_filter2_type": "0",
          "dterm_filter_type": "1",
          "dterm_lowpass2_hz": "0",
          "dterm_lowpass_dyn_hz": "0,350",
          "dterm_lowpass_hz": "100",
          "dterm_notch_cutoff": "0",
          "dterm_notch_hz": "0",
          "dterm_rpm_notch_harmonics": "0",
          "dterm_rpm_notch_min": "100",
          "dterm_rpm_notch_q": "500",
          "dyn_notch_max_hz": "500",
          "dyn_notch_min_hz": "100",
          "dyn_notch_q": "350",
          "dyn_notch_width_percent": "5",
          "feedforward_transition": "0",
          "feedforward_weight": "140,170,90",
          "ff_boost": "15",
          "ff_interpolate_sp": "2",
          "ff_max_rate_limit": "100",
          "ff_spike_limit": "60",
          "gyro_cal_on_first_arm": "0",
          "gyro_hardware_lpf": "0",
          "gyro_lowpass2_hz": "0",
          "gyro_lowpass2_type": "0",
          "gyro_lowpass_dyn_hz": "0,400",
          "gyro_lowpass_hz": "300",
          "gyro_lowpass_type": "0",
          "gyro_notch_cutoff": "105,152",
          "gyro_notch_hz": "115,162",
          "gyro_rpm_notch_harmonics": "3",
          "gyro_rpm_notch_min": "120",
          "gyro_rpm_notch_q": "500",
          "gyro_sync_denom": "1",
          "iterm_relax": "1",
          "iterm_relax_cutoff": "15",
          "iterm_relax_type": "1",
          "iterm_windup": "100",
          "levelPID": "50,50,75",
          "looptime": "125",
          "magPID": "40",
          "mag_hardware": "1",
          "maxthrottle": "2000",
          "motor_pwm_rate": "480",
          "pidAtMinThrottle": "1",
          "pid_process_denom": "1",
          "pidsum_limit": "500",
          "pidsum_limit_yaw": "400",
          "pitchPID": "39,80,40",
          "rate_limits": "1998,1998,1998",
          "rates": "70,70,70",
          "rates_type": "3",
          "rc_expo": "60,60,60",
          "rc_interpolation": "2",
          "rc_interpolation_channels": "2",
          "rc_interpolation_interval": "19",
          "rc_rates": "10,10,10",
          "rc_smoothing_active_cutoffs": "100, 80",
          "rc_smoothing_auto_factor": "20",
          "rc_smoothing_cutoffs": "0, 0",
          "rc_smoothing_debug_axis": "0",
          "rc_smoothing_filter_type": "1, 1",
          "rc_smoothing_rx_average": "3996",
          "rc_smoothing_type": "1",
          "rollPID": "35,75,35",
          "rpm_notch_lpf": "150",
          "serialrx_provider": "9",
          "thr_expo": "0",
          "thr_mid": "50",
          "tpa_breakpoint": "1450",
          "tpa_rate": "70",
          "use_integrated_yaw": "0",
          "use_unsynced_pwm": "0",
          "vbat_pid_gain": "0",
          "vbatcellvoltage": "330,350,430",
          "yawPID": "40,60,0",
          "yaw_deadband": "1",
          "yaw_lowpass_hz": "0",
        },
      ),
      stats: Stats(
        counts: FrameCounts(
          event: 6,
          main: 205,
          slow: 1,
          gps: 0,
          gps_home: 0,
        ),
      ),
      capped: false,
      events: [
        Resume(
          log_iteration: 9472,
          time: 56367270,
        ),
        SyncBeep(55063987),
        FlightMode(
          flags: 524289,
          last_flags: 268435459,
        ),
        Disarm(4),
        Disarm(4),
        End(
          disarm_reason: None,
        ),
      ],
      main: MainFrame(
        count: 205,
        last_iteration: 12556,
        time: FieldSnapshot(
          min: 0,
          max: 56775520,
          unique: 205,
          histogram: (40, 4, 0, 96, 60, 1, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0),
        ),
        fields: Fields([
          Field(
            name: "axisP[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -3,
              max: 5,
              unique: 9,
              histogram: (52, 61, 42, 34, 13, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
            ),
          ),
          Field(
            name: "axisP[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -3,
              max: 4,
              unique: 8,
              histogram: (80, 65, 44, 13, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
            ),
          ),
          Field(
            name: "axisP[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -18,
              max: 17,
              unique: 35,
              histogram: (16, 17, 12, 7, 8, 11, 9, 10, 17, 21, 20, 9, 17, 11, 9, 11),
            ),
          ),
          Field(
            name: "axisI[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          Field(
            name: "axisI[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          Field(
            name: "axisI[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          Field(
            name: "axisD[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -18,
              max: 18,
              unique: 37,
              histogram: (11, 12, 10, 10, 13, 12, 17, 16, 18, 8, 15, 12, 17, 10, 17, 7),
            ),
          ),
          Field(
            name: "axisD[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -14,
              max: 14,
              unique: 29,
              histogram: (21, 10, 22, 18, 18, 18, 16, 15, 16, 13, 15, 7, 7, 4, 5, 0),
            ),
          ),
          Field(
            name: "axisF[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -1,
              max: 0,
              unique: 2,
              histogram: (200, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
            ),
          ),
          Field(
            name: "axisF[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -1,
              max: 0,
              unique: 2,
              histogram: (204, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
            ),
          ),
          Field(
            name: "axisF[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          Field(
            name: "rcCommand[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 6,
              unique: 4,
              histogram: (0, 0, 0, 72, 130, 2, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0),
            ),
          ),
          Field(
            name: "rcCommand[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 4,
              unique: 2,
              histogram: (0, 0, 0, 143, 62, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
            ),
          ),
          Field(
            name: "rcCommand[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          Field(
            name: "rcCommand[3]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 1000,
              unique: 1,
            ),
          ),
          Field(
            name: "setpoint[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 1,
              unique: 1,
            ),
          ),
          Field(
            name: "setpoint[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 1,
              unique: 1,
            ),
          ),
          Field(
            name: "setpoint[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          Field(
            name: "setpoint[3]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          Field(
            name: "vbatLatest",
            unit: Voltage,
            history: FieldSnapshot(
              min: 0,
              max: 16510,
              unique: 12,
              histogram: (15, 0, 62, 0, 19, 0, 26, 0, 33, 0, 21, 0, 11, 0, 18, 0),
            ),
          ),
          Field(
            name: "amperageLatest",
            unit: Amperage,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          Field(
            name: "rssi",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 582,
              unique: 4,
              histogram: (44, 50, 0, 100, 0, 0, 11, 0, 0, 0, 0, 0, 0, 0, 0, 0),
            ),
          ),
          Field(
            name: "gyroADC[0]",
            unit: Rotation,
            history: FieldSnapshot(
              min: -4,
              max: 4,
              unique: 9,
              histogram: (26, 60, 71, 36, 12, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
            ),
          ),
          Field(
            name: "gyroADC[1]",
            unit: Rotation,
            history: FieldSnapshot(
              min: -3,
              max: 4,
              unique: 8,
              histogram: (49, 98, 50, 7, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
            ),
          ),
          Field(
            name: "gyroADC[2]",
            unit: Rotation,
            history: FieldSnapshot(
              min: -17,
              max: 15,
              unique: 32,
              histogram: (7, 11, 16, 22, 9, 20, 15, 15, 22, 10, 18, 15, 10, 5, 6, 4),
            ),
          ),
          Field(
            name: "accSmooth[0]",
            unit: Acceleration,
            history: FieldSnapshot(
              min: -99,
              max: 0,
              unique: 19,
              histogram: (4, 1, 5, 7, 7, 3, 7, 12, 18, 16, 23, 53, 21, 17, 5, 6),
            ),
          ),
          Field(
            name: "accSmooth[1]",
            unit: Acceleration,
            history: FieldSnapshot(
              min: -38,
              max: 0,
              unique: 25,
              histogram: (13, 12, 10, 16, 17, 19, 18, 21, 15, 10, 8, 11, 11, 5, 13, 6),
            ),
          ),
          Field(
            name: "accSmooth[2]",
            unit: Acceleration,
            history: FieldSnapshot(
              min: 0,
              max: 939,
              unique: 16,
              histogram: (15, 3, 21, 16, 37, 33, 24, 17, 8, 9, 5, 5, 3, 2, 3, 4),
            ),
          ),
          Field(
            name: "motor[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 294,
              unique: 101,
              histogram: (8, 14, 17, 12, 18, 13, 8, 11, 7, 9, 12, 11, 13, 16, 17, 19),
            ),
          ),
          Field(
            name: "motor[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 257,
              unique: 87,
              histogram: (17, 16, 14, 24, 7, 17, 6, 20, 9, 8, 16, 10, 5, 18, 13, 5),
            ),
          ),
          Field(
            name: "motor[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 304,
              unique: 108,
              histogram: (10, 8, 13, 14, 8, 7, 15, 19, 8, 9, 11, 7, 8, 35, 18, 15),
            ),
          ),
          Field(
            name: "motor[3]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 267,
              unique: 90,
              histogram: (15, 10, 13, 19, 15, 15, 16, 11, 7, 13, 10, 12, 17, 13, 7, 12),
            ),
          ),
        ]),
      ),
      slow: SlowFrame(
        count: 1,
        fields: Fields([
          Field(
            name: "flightModeFlags",
            unit: FlightMode,
            history: {
              "ARM": 1,
              "BLACKBOX": 1,
            },
          ),
          Field(
            name: "stateFlags",
            unit: State,
            history: {},
          ),
          Field(
            name: "failsafePhase",
            unit: FailsafePhase,
            history: {
              "IDLE": 1,
            },
          ),
          Field(
            name: "rxSignalReceived",
            unit: Boolean,
            history: History(
              yes: 1,
              no: 0,
            ),
          ),
          Field(
            name: "rxFlightChannelsValid",
            unit: Boolean,
            history: History(
              yes: 1,
              no: 0,
            ),
          ),
        ]),
      ),
    )),
    Ok(Log(
      headers: Headers(
        firmware_revision: "Betaflight 4.2.8 (101738d8e) STM32F7X2",
        firmware: Betaflight("4.2.8"),
        firmware_date: Some(Ok("2021-02-15 12:10:35.0")),
        board_info: Some("AIKO AIKONF7"),
        craft_name: Some("Gecko"),
        debug_mode: None,
        disabled_fields: [],
        features: [
          RxSerial,
          ServoTilt,
          Telemetry,
          Osd,
          AirMode,
          EscSensor,
          AntiGravity,
          DynamicFilter,
        ],
        pwm_protocol: Dshot600,
        unknown: {
          "I interval": "256",
          "Log start datetime": "0000-01-01T00:00:00.000+00:00",
          "P interval": "16",
          "P ratio": "16",
          "abs_control_gain": "0",
          "acc_hardware": "0",
          "acc_limit": "0",
          "acc_limit_yaw": "0",
          "acc_lpf_hz": "1000",
          "airmode_activate_throttle": "25",
          "anti_gravity_gain": "3500",
          "anti_gravity_mode": "0",
          "anti_gravity_threshold": "250",
          "baro_hardware": "1",
          "d_min": "27,30,0",
          "d_min_advance": "20",
          "d_min_gain": "37",
          "deadband": "1",
          "dshot_bidir": "1",
          "dshot_idle_value": "550",
          "dterm_filter2_type": "0",
          "dterm_filter_type": "1",
          "dterm_lowpass2_hz": "0",
          "dterm_lowpass_dyn_hz": "0,350",
          "dterm_lowpass_hz": "100",
          "dterm_notch_cutoff": "0",
          "dterm_notch_hz": "0",
          "dterm_rpm_notch_harmonics": "0",
          "dterm_rpm_notch_min": "100",
          "dterm_rpm_notch_q": "500",
          "dyn_notch_max_hz": "500",
          "dyn_notch_min_hz": "100",
          "dyn_notch_q": "350",
          "dyn_notch_width_percent": "5",
          "feedforward_transition": "0",
          "feedforward_weight": "140,170,90",
          "ff_boost": "15",
          "ff_interpolate_sp": "2",
          "ff_max_rate_limit": "100",
          "ff_spike_limit": "60",
          "gyro_cal_on_first_arm": "0",
          "gyro_hardware_lpf": "0",
          "gyro_lowpass2_hz": "0",
          "gyro_lowpass2_type": "0",
          "gyro_lowpass_dyn_hz": "0,400",
          "gyro_lowpass_hz": "300",
          "gyro_lowpass_type": "0",
          "gyro_notch_cutoff": "105,152",
          "gyro_notch_hz": "115,162",
          "gyro_rpm_notch_harmonics": "3",
          "gyro_rpm_notch_min": "120",
          "gyro_rpm_notch_q": "500",
          "gyro_sync_denom": "1",
          "iterm_relax": "1",
          "iterm_relax_cutoff": "15",
          "iterm_relax_type": "1",
          "iterm_windup": "100",
          "levelPID": "50,50,75",
          "looptime": "125",
          "magPID": "40",
          "mag_hardware": "1",
          "maxthrottle": "2000",
          "motor_pwm_rate": "480",
          "pidAtMinThrottle": "1",
          "pid_process_denom": "1",
          "pidsum_limit": "500",
          "pidsum_limit_yaw": "400",
          "pitchPID": "39,80,40",
          "rate_limits": "1998,1998,1998",
          "rates": "70,70,70",
          "rates_type": "3",
          "rc_expo": "60,60,60",
          "rc_interpolation": "2",
          "rc_interpolation_channels": "2",
          "rc_interpolation_interval": "19",
          "rc_rates": "10,10,10",
          "rc_smoothing_active_cutoffs": "100, 80",
          "rc_smoothing_auto_factor": "20",
          "rc_smoothing_cutoffs": "0, 0",
          "rc_smoothing_debug_axis": "0",
          "rc_smoothing_filter_type": "1, 1",
          "rc_smoothing_rx_average": "3996",
          "rc_smoothing_type": "1",
          "rollPID": "35,75,35",
          "rpm_notch_lpf": "150",
          "serialrx_provider": "9",
          "thr_expo": "0",
          "thr_mid": "50",
          "tpa_breakpoint": "1450",
          "tpa_rate": "70",
          "use_integrated_yaw": "0",
          "use_unsynced_pwm": "0",
          "vbat_pid_gain": "0",
          "vbatcellvoltage": "330,350,430",
          "yawPID": "40,60,0",
          "yaw_deadband": "1",
          "yaw_lowpass_hz": "0",
        },
      ),
      stats: Stats(
        counts: FrameCounts(
          event: 2,
          main: 0,
          slow: 0,
          gps: 0,
          gps_home: 0,
        ),
      ),
      capped: false,
      events: [
        Disarm(4),
        End(
          disarm_reason: None,
        ),
      ],
    )),
  ],
)
